syntax = "proto3";

option csharp_namespace = "MsuRandomizerMessenger";

package messenger;

service Messenger {
  rpc MsuGenerated (MsuGeneratedRequest) returns (MsuGeneratedResponse);
  rpc TrackPlayed (TrackPlayedRequest) returns (TrackPlayedResponse);
}

message MsuGeneratedRequest {
  string msu_name = 1;
  string msu_creator = 2;
  string msu_path = 3;
  string msu_type = 4;
}

message MsuGeneratedResponse {
}

message TrackPlayedRequest {
  string msu_name = 1;
  string msu_creator = 2;
  int32 track_number = 3;
  string track_name = 4;
  string song_name = 5;
  string artist_name = 6;
  string album_name = 7;
  string url = 8;
}

message TrackPlayedResponse {
}